--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -1,1 +1,44 @@
-html
+<!DOCTYPE html>
+<html>
+<head>
+ <meta charset="utf-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1">  
+   <link rel="stylesheet" type="text/css" href="css/styles.css"> 
+   <title>Module 2 Solution</title>
+</head>
+   <body> 
+	<h1>National Symbols</h1>
+	 <div class="row"> 
+	 	<div class="container col-lg-4 col-md-6 col-sm-12">  
+	 		<section>  
+	 			<div id="national flag">   
+	 			National Flag  
+	 		    </div>  
+	 		    <p>   
+	 		    The National Flag is a horizontal tricolour of India saffron (kesaria) at the top, white in the middle and India green at the bottom in equal proportion. ... The top saffron colour, indicates the strength and courage of the country. The white middle band indicates peace and truth with Dharma Chakra. Adopted on, 22 July 1947. Designed by, Pingali Venkayya.  
+	 		    </p>  
+	 		</section> 
+	 	</div> 
+	 	<div class="container col-lg-4 col-md-6 col-sm-12">  
+	 		<section>  
+	 			<div id="tiger">   
+	 			Tiger  
+	 		    </div>  
+	 		<p>   
+	 		The tiger is the largest extant cat species and a member of the genus Panthera. It is most recognisable for its dark vertical stripes on orange-brown fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar. National animal of India.  
+	 	    </p>  
+	        </section> 
+	    </div> 
+	    <div class="container col-lg-4 col-md-12 col-sm-12">  
+	    	<section>  
+	    		<div id="peacock">   
+	    		Peacock  
+	    	    </div>  
+	    	    <p> 
+	    	    Peafowl is a common name for three bird species in the genera Pavo and Afropavo of the family Phasianidae, the pheasants and their allies. Male peafowl are referred to as peacocks, and female peafowl as peahens, though peafowl of either sex are often referred to colloquially as "peacocks". National bird of India.   
+	    	    </p>  
+	    	</section> 
+	    </div> 
+	 </div>
+   </body>
+</html>
