--- a/module2_solution/index.html
+++ b/module2_solution/index.html
@@ -11,21 +11,21 @@
 	 <div class="row"> 
 	 	<div class="container col-lg-4 col-md-6 col-sm-12">  
 	 		<section>  
-	 			<div id="national flag">   
-	 			National Flag  
+	 			<div id="tiger">   
+	 			Tiger  
 	 		    </div>  
 	 		    <p>   
-	 		    The National Flag is a horizontal tricolour of India saffron (kesaria) at the top, white in the middle and India green at the bottom in equal proportion. ... The top saffron colour, indicates the strength and courage of the country. The white middle band indicates peace and truth with Dharma Chakra. Adopted on, 22 July 1947. Designed by, Pingali Venkayya.  
+	 		    The tiger is the largest extant cat species and a member of the genus Panthera. It is most recognisable for its dark vertical stripes on orange-brown fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar. National animal of India.    
 	 		    </p>  
 	 		</section> 
 	 	</div> 
 	 	<div class="container col-lg-4 col-md-6 col-sm-12">  
 	 		<section>  
-	 			<div id="tiger">   
-	 			Tiger  
+	 			<div id="lotus">   
+	 			Lotus  
 	 		    </div>  
 	 		<p>   
-	 		The tiger is the largest extant cat species and a member of the genus Panthera. It is most recognisable for its dark vertical stripes on orange-brown fur with a lighter underside. It is an apex predator, primarily preying on ungulates such as deer and wild boar. National animal of India.  
+	 		Nelumbo nucifera, also known as Indian lotus, sacred lotus, bean of India, Egyptian bean or simply lotus, is one of two extant species of aquatic plant in the family Nelumbonaceae. It is often colloquially called a water lily. National flower of India.
 	 	    </p>  
 	        </section> 
 	    </div> 
